# XMLtoHTML-PDF

./: README.md  output.html  pyproject.toml  requirements.txt  test.xml  xmltohtml.py  xmltopdf.py
tests/: test_basic.py  test_basic_error.py  test_conversion.py  test_parametrizado.py
